tests/snapshots/errors__errors@type_mismatch@stderr.snap
---
source: tests/errors.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
error: Type of binding does not match... (1/2)
  --> examples/type_mismatch.rs:36:28
   |
36 |         maker: static_bind(CoffeeMaker<ElectricHeater, ThermoSiphon<ElectricHeater>>) [logger, heater, pump]
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: static bindings do not wrap their type T and just return a T

error: ...type specified here (2/2)
  --> examples/type_mismatch.rs:40:24
   |
40 |     fn maker(&self) -> Rc<RefCell<CoffeeMaker<H, P>>>;
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `StilettoCoffeeShop`
  --> examples/type_mismatch.rs:20:23
   |
20 |     let coffee_shop = StilettoCoffeeShop::builder().build();
   |                       ^^^^^^^^^^^^^^^^^^ use of undeclared type `StilettoCoffeeShop`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `errors` (example "type_mismatch") due to 3 previous errors
